--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <aspectj.version>1.9.7</aspectj.version>
         <allure.version>2.18.1</allure.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <allure.results.directory>target/allure-results</allure.results.directory>
     </properties>
     <build>
         <plugins>
